--- a/.github/workflows/ai-inference.yml
+++ b/.github/workflows/ai-inference.yml
@@ -37,6 +37,7 @@ jobs:
         uses: actions/ai-inference@v1
         with:
           model: gpt-4o-mini
+          max-tokens: 2000
           prompt-file: AI_inputs/a.md
           system-prompt-file: ${{ steps.persona.outputs.file }}
           # system-prompt: |
