--- a/.github/workflows/ai-inference.yml
+++ b/.github/workflows/ai-inference.yml
@@ -45,6 +45,7 @@ jobs:
 
       - name: Save response and move input if success
         run: |
+          set -e
           mkdir -p AI_output
           mkdir -p AI_archived
           
@@ -57,8 +58,15 @@ jobs:
             exit 1
           fi
           
-          # 元ファイルをアーカイブに移動
-          mv "$INPUT_FILE" AI_archived/
+          # 元ファイルをアーカイブに移動（スペース対応）
+          if [ -f "${INPUT_FILE}" ]; then
+            mv "${INPUT_FILE}" AI_archived/
+            echo "元ファイルを AI_archived に移動しました: ${INPUT_FILE}"
+          else
+            echo "移動対象のファイルが存在しません: ${INPUT_FILE}"
+            exit 1
+          fi
+
           echo "正常保存＆移動完了"
 
       - name: Commit and push
