--- a/.github/workflows/ai-inference.yml
+++ b/.github/workflows/ai-inference.yml
@@ -43,44 +43,17 @@ jobs:
           prompt-file: ${{ env.INPUT_FILE }}
           system-prompt-file: ${{ steps.summarize_prompt.outputs.file }}
 
-      - name: Save response and move input if success
+      - name: Delete original input file
         run: |
-          set -e
-          mkdir -p AI_output AI_archived
-
-          # GitHub Actions 変数をシェル変数にコピー
-          RESPONSE="${{ steps.inference_summarize.outputs.response }}"
-
-          # ヒアドキュメントでMarkdownを安全に保存（インデントなし）
-          cat <<EOF > "$FILE_NAME"
-$RESPONSE
-EOF
-
-          # 正常性チェック
-          if [ ! -s "$FILE_NAME" ]; then
-            echo "生成失敗。移動しません。"
-            exit 1
-          fi
-
-          # 元ファイルをアーカイブに移動（スペース対応）
           if [ -f "$INPUT_FILE" ]; then
-            mv "$INPUT_FILE" AI_archived/
-            echo "元ファイルを AI_archived に移動しました: $INPUT_FILE"
+            rm "$INPUT_FILE"
+            echo "元ファイルを削除しました: $INPUT_FILE"
           else
-            echo "移動対象のファイルが存在しません: $INPUT_FILE"
-            exit 1
+            echo "削除対象のファイルが存在しません: $INPUT_FILE"
           fi
 
-          # 確認用
-          echo "AI_archived の内容:"
-          ls -l AI_archived/
-          echo "AI_inputs の内容:"
-          ls -l AI_inputs/
-
-          echo "正常保存＆移動完了"
-
-        - name: Commit and push
-          uses: stefanzweifel/git-auto-commit-action@v5
-          with:
-            commit_message: Add AI summary ${{ github.run_id }}
-            file_pattern: AI_output/*.txt
+      - name: Commit and push
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: Add AI summary ${{ github.run_id }}
+          file_pattern: AI_output/*.txt
