--- a/.github/workflows/ai-inference.yml
+++ b/.github/workflows/ai-inference.yml
@@ -61,7 +61,8 @@ jobs:
       - name: Commit and push
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: Add AI summary ${{ github.run_id }}
+          commit_message: Add AI summary and delete input ${{ github.run_id }}
+          all: true
           file_pattern: |
             AI_output/*.txt
-            AI_inputs/*.md
+            AI_inputs/
