--- a/.github/workflows/ai-inference.yml
+++ b/.github/workflows/ai-inference.yml
@@ -62,7 +62,4 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: Add AI summary and delete input ${{ github.run_id }}
-          all: true
-          file_pattern: |
-            AI_output/*.txt
-            AI_inputs/
+          add_options: -A
